--- a/index.html
+++ b/index.html
@@ -14542,6 +14542,13 @@
 </tr>
 
 <tr>
+<td>Out of This World</td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Outer Space</td>
 <td>1958</td>
 <td>Charlton</td>
@@ -14574,6 +14581,13 @@
 <td>2000</td>
 <td>Vertigo</td>
 <td><a href="OutlawNation/OutlawNation.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Outlaws of the Wild West</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -14640,6 +14654,13 @@
 </tr>
 
 <tr>
+<td>Pancho Villa</td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Panda Khan</td>
 <td>1987</td>
 <td>Abacus</td>
@@ -14686,6 +14707,13 @@
 <td>2009</td>
 <td>IDW</td>
 <td><a href="Parker/Parker.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Parole Breakers</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14752,6 +14780,13 @@
 </tr>
 
 <tr>
+<td>Penny</td>
+<td>1947</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr> 
+
+<tr>
 <td>Perdita Durango</td>
 <td>1992</td>
 <td>Rivages</td>
@@ -14794,10 +14829,17 @@
 </tr>
 
 <tr>
-<td>Peter, the Little Pest</td>
+<td>Peter the Little Pest</td>
 <td>1969</td>
 <td>Marvel</td>
 <td><a href="PeterThePest/PeterThePest.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Peter Rabbit</td>
+<td>1947</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14834,6 +14876,12 @@
 <td>Marvel</td>
 <td><a href="NightRider/NightRider.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Phantom Witch Doctor</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
 <td>Phil Foglio</td>
@@ -14896,6 +14944,13 @@
 <td>1967</td>
 <td>Disney</td>
 <td><a href="PiratesOfTheCaribbean/PiratesOfTheCaribbean.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Pixie Puzzle Rocket To Adventureland</td>
+<td>1952</td>
+<td>Avon</td>
+<td><A href="Avon/Avon.html">Details</a></td> 
 </tr>
 
 <tr>
@@ -15017,6 +15072,12 @@
 </tr>
 
 <tr>
+<td>Police Line-Up</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+
+<tr>
 <td>Popeye</td>
 <td>1929</td>
 <td>King Features</td>
@@ -15133,6 +15194,19 @@
 <td><a href="PrinceValiant/PrinceValiant.html">Details</a></td>
 </tr>
 
+<tr>
+<td>Prison Break!</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Prison Riot</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td> 
+</tr>
 
 <tr>
 <td>Private Eye</td>
@@ -15140,7 +15214,6 @@
 <td>Atlas</td>
 <td><a href="PrivateEye/PrivateEye.html">Details</a></td>
 </tr>
-
 
 <tr>
 <td>Professor Xavier and the X-Men</td>
@@ -15403,6 +15476,13 @@
 </tr>
 
 <tr>
+<td>Realistic Romances</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rebecca Yanovskaya</td>
 <td>1990?</td>
 <td>Creator</td>
@@ -15422,6 +15502,12 @@
 <td>BBC</td>
 <td><a href="RedDwarf/RedDwarf.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Red Mountain featuring Quantrell's Raiders</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
 <td>Red Raven</td>
@@ -15470,6 +15556,13 @@
 <td>1917</td>
 <td>Creator</td>
 <td><a href="ReedCrandall/ReedCrandall.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Reform School Girl</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15718,10 +15811,24 @@
 </tr>
 
 <tr>
+<td>Robotmen of the Lost Planet</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rocket Raccoon</td>
 <td>1984</td>
 <td>Marvel</td>
 <td><a href="RocketRaccoon/RocketRaccoon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rocket to the Moon</td>
+<td>1951</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15814,6 +15921,12 @@
 <td>Creator</td>
 <td><a href="RonCobb/RonCobb.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Romantic Love</td>
+<td>1949</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 
 <tr>
 <td>Ronin</td>
@@ -15991,6 +16104,13 @@
 </tr>
 
 <tr>
+<td>Saint</td>
+<td>1947</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Saint Sinner</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -16072,6 +16192,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="SavageCombatTales/SavageCombatTales.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Savage Raids of Chief Geronimo</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16208,6 +16335,13 @@
 </tr>
 
 <tr>
+<td>Sea Hound</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Seconds</td>
 <td>2014</td>
 <td>Random House</td>
@@ -16233,6 +16367,13 @@
 <td>2010</td>
 <td>Marvel</td>
 <td><a href="SecretAvengers/SecretAvengers.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Secret Diary of Eerie Adventures</td>
+<td>1953</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16317,6 +16458,13 @@
 <td>1942</td>
 <td>DC</td>
 <td><a href="SensationComics/SensationComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sensational Police Cases</td>
+<td>1952</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16495,6 +16643,13 @@
 </tr>
 
 <tr>
+<td>Sheriff Bob Dixon's Chuck Wagon</td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sheriff of Babylon</td>
 <td>2016</td>
 <td>Vertigo</td>
@@ -16569,6 +16724,13 @@
 <td>2014</td>
 <td>Image</td>
 <td><a href="Shutter/Shutter.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sideshow</td>
+<td>1949</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16768,6 +16930,13 @@
 </tr>
 
 <tr>
+<td>Slave Girl Comics</td>
+<td>1949</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Sleepwalker</td>
 <td>1991</td>
 <td>Marvel</td>
@@ -16922,6 +17091,13 @@
 </tr>
 
 <tr>
+<td>Space Comics</td> 
+<td>1954</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td> 
+</tr>
+
+<tr>
 <td>Space Detective</td>
 <td>1951</td>
 <td>Avon</td>
@@ -16936,10 +17112,24 @@
 </tr>
 
 <tr>
+<td>Space Mouse</td>
+<td>1953</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space Squadron</td>
 <td>1951</td>
 <td>Atlas</td>
 <td><a href="SpaceSquadron/SpaceSquadron.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Space Thrillers</td>
+<td>1954</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16989,6 +17179,13 @@
 <td>1940</td>
 <td>United Feature</td>
 <td><a href="Sparkler/Sparkler.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sparkling Love<td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17073,6 +17270,13 @@
 <td>1978</td>
 <td>Marvel</td>
 <td><a href="SpiderWoman/SpiderWoman.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Spotty the Pup</td>
+<td>1953</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17699,6 +17903,13 @@
 </tr>
 
 <tr>
+<td>Super Pup</td>
+<td>1954</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Supersoldiers</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -17951,6 +18162,13 @@
 </tr>
 
 <tr>
+<td>Teddy Roosevelt and His Rough Riders</td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</td>
+</tr>
+
+<tr>
 <td>Teen Comics</td>
 <td>1947</td>
 <td>Atlas</td>
@@ -17969,6 +18187,13 @@
 <td>1984</td>
 <td>Mirage</td>
 <td><a href="TMNT/TMNT.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Television Puppet Show</td>
+<td>1950</td>
+<td>Avon</td>
+<td><a href="Avon/Avon.html"></td>
 </tr>
 
 <tr>
@@ -18567,6 +18792,27 @@
 </tr>
 
 <tr>
+<td>U.S. Marines in Action</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>U.S. Paratroops</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>U.S. Tank Commandos</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>U.S. War Machine</td>
 <td>2001</td>
 <td>Marvel</td>
@@ -18620,6 +18866,20 @@
 <td>2015</td>
 <td>Marvel</td>
 <td><a href="UnbeatableSquirrelGirl/UnbeatableSquirrelGirl.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Undersea Fighting Commandos</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Underworld Story</td>
+<td>1950</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18718,6 +18978,13 @@
 <td>2000</td>
 <td>Marvel</td>
 <td><a href="UniverseX/UniverseX.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Unknown Man</td>
+<td>1951</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19100,6 +19367,13 @@
 </tr>
 
 <tr>
+<td>War Dogs of the U.S. Army</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>War Is Hell</td>
 <td>1973</td>
 <td>Marvel</td>
@@ -19380,6 +19654,13 @@
 </tr>
 
 <tr>
+<td>Western Bandits</td>
+<td>1952</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Western Tales of Black Rider</td>
 <td>1948</td>
 <td>Atlas</td>
@@ -19443,6 +19724,20 @@
 </tr>
 
 <tr>
+<td>White Chief of the Pawnee Indians</td>
+<td>1951</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
+<td>White Princess of the Jungle</td>
+<td>1951</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
+</tr>
+
+<tr>
 <td>White Tiger</td>
 <td>2006</td>
 <td>Marvel</td>
@@ -19475,6 +19770,13 @@
 <td>2014</td>
 <td>Image</td>
 <td><a href="WickedAndTheDivine/WickedAndTheDivine.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Wild Bill Hickock</td>
+<td>1949</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19629,6 +19931,13 @@
 <td>1969</td>
 <td>DC</td>
 <td><a href="WitchingHour/WitchingHour.html">Details</a></td>
+</tr>
+
+<tr>
+<td>With the U.S. Paratroops Behind Enemy Lines</td>
+<td>1951</td> 
+<td>Avon</td>
+<td><a href="Avon/Avon.html">Details</a></td>
 </tr>
 
 <tr>
