--- a/FictionHouse/FictionHouse.html
+++ b/FictionHouse/FictionHouse.html
@@ -59,31 +59,31 @@ Sheena, Queen of the Jungle appeared in that initial issue, soon becoming the co
 </p><p>
 Other features in Jumbo Comics #1 included three by future industry legend <a href="../JackKirby/JackKirby.html">Jack Kirby</a>, representing his first comic-book work following his debut in Wild Boy Magazine: the science fiction feature The Diary of Dr. Hayward (under the pseudonym "Curt Davis"), the modern-West crimefighter strip Wilton of the West (as "Fred Sande"), and Part One of the swashbuckling serialization of Alexandre Dumas, père's The Count of Monte Cristo (as "Jack Curtiss"), each four pages long.
 </p><p>
-<li><a href="../JumboComics/JumboComics.html">Jumbo Comics</a> (167 issues, 1938)
-<li><a href="../JungleComics/JungleComics.html">Jungle Comics</a> (163 issues, 1940)
-<li><a href="../WingsComics/WingsComics.html">Wings Comics</a> (124 issues, 1940)
-<li><a href="../FightComics/FightComics.html">Fight Comics</a> (86 issues, 1940)
-<li><a href="../PlanetComics/PlanetComics.html">Planet Comics</a> (73 issues, 1940)
-<li><a href="../RangersOfFreedom/RangersOfFreedom.html">Rangers of Freedom</a> (69 issues, 1941)
-<li><a href="../Kaanga/Kaanga.html">Ka'a'nga, Jungle King</a> (20 issues, 1949)
-<li><a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a> (18 issues, 1942)
-<li><a href="../Wambi/Wambi.html">Wambi, Jungle Boy</a> (18 issues, 1942)
-<li><a href="../Indians/Indians.html">Indians</a> (17 issues, 1950)
-<li><a href="../CowgirlRomances/CowgirlRomances.html">Cowgirl Romances</a> (12 issues, 1950)
-<li><a href="../GhostComics/GhostComics.html">Ghost Comics</a> (11 issues , 1951)
-<li><a href="../Firehair/Firehair.html">Firehair</a> (11 issues, 1950)
-<li><a href="../LongBow/LongBow.html">Long Bow</a> (9 issues, 1951)
-<li><a href="../Spirit/Spirit.html">The Spirit</a> (5 issues, 1952–54)
-<li><a href="FictionHouse19.jpg">Toyland</a> (4 issues, 1947, covers by Bob Lubbers)
-<li><a href="FictionHouse22.jpg">Jet Aces</a> (4 issues, 1952)
-<li><a href="../MovieComics/MovieComics.html">Movie Comics</a> (4 issues, 1946)
-<li><a href="FictionHouse26.jpg">War Birds</a> (3 issues, 1954)
-<li><a href="FictionHouse16.jpg">The Monster</a> (2 issues, 1953, covers by Maurice Whitman)
-<li><a href="FictionHouse11.jpg">3-D Circus</a> (1 issue, 1953)
-<li><a href="FictionHouse13.jpg">Apache</a> (1 issue, 1951)
-<li><a href="FictionHouse14.jpg">The First Christmas</a> (1 issue, 1953)
-<li><a href="FictionHouse15.jpg">Man O' Mars</a> (1 issue, 1953, cover by Maurice Whitman)
-<li><a href="FictionHouse4.jpg">Knockout Adventures</a> (1 issue, 1953, cover by Bill Benulis)
+<li><a href="FictionHouse11.jpg">3-D Circus</a> (1953)
+<li><a href="FictionHouse13.jpg">Apache</a> (1951)
+<li><a href="../CowgirlRomances/CowgirlRomances.html">Cowgirl Romances</a> (1950)
+<li><a href="../FightComics/FightComics.html">Fight Comics</a> (1940)
+<li><a href="../Firehair/Firehair.html">Firehair</a> (1950)
+<li><a href="FictionHouse14.jpg">First Christmas</a> (1953)
+<li><a href="../GhostComics/GhostComics.html">Ghost Comics</a> (1951)
+<li><a href="../Indians/Indians.html">Indians</a> (1950)
+<li><a href="FictionHouse22.jpg">Jet Aces</a> (1952)
+<li><a href="../JumboComics/JumboComics.html">Jumbo Comics</a> (1938)
+<li><a href="../JungleComics/JungleComics.html">Jungle Comics</a> (1940)
+<li><a href="../Kaanga/Kaanga.html">Ka'a'nga, Jungle King</a> (1949)
+<li><a href="FictionHouse4.jpg">Knockout Adventures</a> (1953)
+<li><a href="../LongBow/LongBow.html">Long Bow</a> (1951)
+<li><a href="FictionHouse15.jpg">Man O' Mars</a> (1953)
+<li><a href="FictionHouse16.jpg">Monster</a> (1953)
+<li><a href="../MovieComics/MovieComics.html">Movie Comics</a> (1946)
+<li><a href="../PlanetComics/PlanetComics.html">Planet Comics</a> (1940)
+<li><a href="../RangersOfFreedom/RangersOfFreedom.html">Rangers of Freedom</a> (1941)
+<li><a href="../Sheena/Sheena.html">Sheena, Queen of the Jungle</a> (1942)
+<li><a href="../Spirit/Spirit.html">Spirit</a> (1952)
+<li><a href="FictionHouse19.jpg">Toyland</a> (1947)
+<li><a href="../Wambi/Wambi.html">Wambi, Jungle Boy</a> (1942)
+<li><a href="FictionHouse26.jpg">War Birds</a> (1954)
+<li><a href="../WingsComics/WingsComics.html">Wings Comics</a> (1940)
 
 </p>
 </body>
