--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
 </tr>
 
 <tr>
+<td>3-D Circus</td>
+<td>1953</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>3-D Tales of the West</td>
 <td>1954</td>
 <td>Marvel </td>
@@ -2112,6 +2119,13 @@
 <td>1985</td>
 <td>Publisher</td>
 <td><a href="AntarcticPress/AntarcticPress.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Apache</td>
+<td>1951</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7824,6 +7838,13 @@
 </tr>
 
 <tr>
+<td>First Christmas</td>
+<td>1953</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>First Comics</td>
 <td>1983</td>
 <td>Publisher</td>
@@ -10553,6 +10574,13 @@
 </tr>
 
 <tr>
+<td>Jet Aces</td>
+<td>1952</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jet City Comics</td>
 <td>2011</td>
 <td>Publisher</td>
@@ -11295,6 +11323,13 @@
 </tr>
 
 <tr>
+<td>Knockout Adventures</td>
+<td>1953</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Kodansha</td>
 <td>1909</td>
 <td>Publisher</td>
@@ -11835,7 +11870,7 @@
 
 <tr>
 <td>Long Bow</td>
-<td>1950</td>
+<td>1951</td>
 <td>Fiction House</td>
 <td><a href="LongBow/LongBow.html">Details</a></td>
 </tr>
@@ -12160,6 +12195,13 @@
 <td>1977</td>
 <td>NBC</td>
 <td><a href="ManFromAtlantis/ManFromAtlantis.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Man O' Mars</td>
+<td>1953</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13345,6 +13387,13 @@
 </tr>
 
 <tr>
+<td>Monster</td>
+<td>1953</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Monster Hunters</td>
 <td>1993</td>
 <td>Charlton</td>
@@ -13545,6 +13594,13 @@
 <td>1992</td>
 <td>Marvel</td>
 <td><a href="Motormouth/Motormouth.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Movie Comics</td>
+<td>1946</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15431,6 +15487,13 @@
 <td>1949</td>
 <td>Atlas</td>
 <td><a href="RangelandLove/RangelandLove.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rangers of Freedom</td>
+<td>1941</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18193,7 +18256,7 @@
 <td>Television Puppet Show</td>
 <td>1950</td>
 <td>Avon</td>
-<td><a href="Avon/Avon.html"></td>
+<td><a href="Avon/Avon.html">Details</td>
 </tr>
 
 <tr>
@@ -18642,6 +18705,13 @@
 <td>1995</td>
 <td>Pixar</td>
 <td><a href="ToyStory/ToyStory.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Toyland</td>
+<td>1947</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19343,6 +19413,13 @@
 <td>1948</td>
 <td>EC</td>
 <td><a href="ECComics/ECComics.html">Details</a></td> 
+</tr>
+
+<tr>
+<td>War Birds</td>
+<td>1954</td>
+<td>Fiction House</td>
+<td><a href="FictionHouse/FictionHouse.html">Details</a></td>
 </tr>
 
 <tr>
