--- a/index.html
+++ b/index.html
@@ -366,6 +366,13 @@
 </tr>
 
 <tr>
+<td>2000 Maniacs</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>2001 A Space Odyssey</td>
 <td>1968</td>
 <td>MGM</td>
@@ -877,6 +884,13 @@
 <td>2010</td>
 <td>Cartoon Network</td>
 <td><a href="AdventureTime/AdventureTime.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Adventurers</td>
+<td>1986</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -2311,6 +2325,13 @@
 </tr>
 
 <tr>
+<td>Arthur Sex</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Arthur Suydam</td>
 <td>1953</td>
 <td>Creator</td>
@@ -2655,11 +2676,19 @@
 </tr>
 
 <tr>
+<td>Bad Girls Go to Hell</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Badger</td>
 <td>1984</td>
 <td>Capital</td>
 <td><a href="Badger/Badger.html">Details</a></td>
 </tr>
+
 
 <tr>
 <td>Badlands</td>
@@ -3630,10 +3659,24 @@
 </tr>
 
 <tr>
+<td>Blood n Guts</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Blood: A Tale</td>
 <td>1988</td>
 <td>Epic</td>
 <td><a href="BloodATale/BloodATale.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bloodlines</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3717,6 +3760,20 @@
 <td>1916</td>
 <td>Creator</td>
 <td><a href="BobPowell/BobPowell.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Body Count</td>
+<td>1989</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Bodyguard</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -3808,6 +3865,13 @@
 <td>1941</td>
 <td>Creator</td>
 <td><a href="BorisVallejo/BorisVallejo.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Born to Kill</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4392,6 +4456,13 @@
 </tr>
 
 <tr>
+<td>Carmilla</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Carmine Infantino</td>
 <td>1925</td>
 <td>Creator</td>
@@ -4413,10 +4484,10 @@
 </tr>
 
 <tr>
-<td>Casimir Lee</td>
-<td>1990?</td>
-<td>Creator</td>
-<td><a href="CasimirLee/CasimirLee.html">Details</a></td>
+<td>Casanova</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4424,6 +4495,13 @@
 <td>1949</td>
 <td>Marvel</td>
 <td><a href="CaseyCrimePhotographer/CaseyCrimePhotographer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Casimir Lee</td>
+<td>1990?</td>
+<td>Creator</td>
+<td><a href="CasimirLee/CasimirLee.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4448,10 +4526,31 @@
 </tr>
 
 <tr>
+<td>Cat</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cat &amp; Mouse</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Catalyst Comix</td>
 <td>2013</td>
 <td>Dark Horse</td>
 <td><a href="CatalystComix/CatalystComix.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Cathy</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4609,6 +4708,13 @@
 </tr>
 
 <tr>
+<td>Chaser Platoon</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cherry</td>
 <td>1982</td>
 <td>Last Gasp</td>
@@ -4710,6 +4816,13 @@
 <td>1904</td>
 <td>Publisher</td>
 <td><a href="ChiltonBooks/ChiltonBooks.html">Details</a></td>
+</tr>
+
+<tr>
+<td>China Sea</td>
+<td>1989</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -4836,6 +4949,13 @@
 <td>2015</td>
 <td>Vertigo</td>
 <td><a href="CleanRoom/CleanRoom.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Climaxxx</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -5616,6 +5736,13 @@
 </tr>
 
 <tr>
+<td>Cyberlust</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Cyberspace 3000</td>
 <td>1993</td>
 <td>Marvel</td>
@@ -5879,6 +6006,13 @@
 <td>2009</td>
 <td>Marvel</td>
 <td><a href="DarkReign/DarkReign.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Darkewood</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6148,6 +6282,13 @@
 </tr>
 
 <tr>
+<td>Deadwalkers</td>
+<td>1997</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Death Metal</td>
 <td>1994</td>
 <td>Marvel</td>
@@ -6211,6 +6352,13 @@
 </tr>
 
 <tr>
+<td>Debbie Does Comics</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Defenders of Dynatron City</td>
 <td>1992</td>
 <td>Marvel</td>
@@ -6260,17 +6408,24 @@
 </tr>
 
 <tr>
-<td>Demon-Hunter</td>
-<td>1975</td>
-<td>Atlas Seaboard</td>
-<td><a href="DemonHunter/DemonHunter.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Demon Dreams</td>
 <td>1984</td>
 <td>PC</td>
 <td><a href="DemonDreams/DemonDreams.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Demon Hunter</td>
+<td>1989</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Demon-Hunter</td>
+<td>1975</td>
+<td>Atlas Seaboard</td>
+<td><a href="DemonHunter/DemonHunter.html">Details</a></td>
 </tr>
 
 <tr>
@@ -6780,6 +6935,13 @@
 </tr>
 
 <tr>
+<td>Dragons in the Moon</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Dragonslayer</td>
 <td>1981</td>
 <td>Paramount</td>
@@ -7144,6 +7306,13 @@
 </tr>
 
 <tr>
+<td>Elflord Chronicles</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Elfquest</td>
 <td>1978</td>
 <td>Warp</td>
@@ -7291,6 +7460,13 @@
 </tr>
 
 <tr>
+<td>Erotic Tales</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Erte</td>
 <td>1892</td>
 <td>Creator</td>
@@ -7429,6 +7605,13 @@
 <td>2001</td>
 <td>Marvel</td>
 <td><a href="Exiles/Exiles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Experience</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7824,6 +8007,13 @@
 </tr>
 
 <tr>
+<td>Final Taboo</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Firehair</td>
 <td>1950</td>
 <td>Fiction House</td>
@@ -7835,6 +8025,13 @@
 <td>1986</td>
 <td>Marvel</td>
 <td><a href="Firestar/Firestar.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fire Team</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -7911,6 +8108,13 @@
 <td>1929</td>
 <td>Publisher</td>
 <td><a href="MaxFleischer/MaxFleischer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Flesh Gordon</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -8222,6 +8426,13 @@
 </tr>
 
 <tr>
+<td>Full Throttle</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Fun Home</td>
 <td>2006</td>
 <td>Houghton Mifflin</td>
@@ -8373,6 +8584,13 @@
 <td>1999</td>
 <td>Marvel</td>
 <td><a href="GalactusTheDevourer/GalactusTheDevourer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Galaxina</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -9285,6 +9503,20 @@
 </tr>
 
 <tr>
+<td>Hardball</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Hardkorr</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Harlan Ellison's Dream Corridor</td>
 <td>1995</td>
 <td>Dark Horse</td>
@@ -9719,6 +9951,13 @@
 </tr>
 
 <tr>
+<td>Hooters</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Horror From the Tomb</td>
 <td>1954</td>
 <td>Premier</td>
@@ -9912,6 +10151,13 @@
 <td>2002</td>
 <td>Vertigo</td>
 <td><a href="IPaparazzi/IPaparazzi.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Icarus</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -10469,6 +10715,13 @@
 </tr>
 
 <tr>
+<td>Jake Thrash</td>
+<td>1988</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>James Bond</td>
 <td>1953</td>
 <td>MGM</td>
@@ -10917,6 +11170,13 @@
 </tr>
 
 <tr>
+<td>Jungle Love</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Jungle Tales</td>
 <td>1954</td>
 <td>Marvel</td>
@@ -11141,6 +11401,13 @@
 </tr>
 
 <tr>
+<td>Kiku San</td>
+<td>1988</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Killing Joke</td>
 <td>1988</td>
 <td>DC</td>
@@ -11166,6 +11433,13 @@
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="https:/blzimg.github.io/KingArthurKJ/KingArthurKJ.html">Details</a></td>
+</tr>
+
+<tr>
+<td>King Arthur Uncensored</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -11568,6 +11842,20 @@
 </tr>
 
 <tr>
+<td>Leather &amp; Lace</td>
+<td>1989</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Leather &amp; Lace Book II: Blood Sex &amp; Tears</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lee Elias</td>
 <td>1920</td>
 <td>Creator</td>
@@ -11817,6 +12105,13 @@
 <td>2005</td>
 <td>Marvel</td>
 <td><a href="Livewires/Livewires.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Lizard Lady</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -12142,6 +12437,13 @@
 </tr>
 
 <tr>
+<td>Maelstrom</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Magazine Enterprises</td>
 <td>1943</td>
 <td>Publisher</td>
@@ -12244,6 +12546,13 @@
 <td>1967</td>
 <td>Charlton</td>
 <td><a href="MGDG/MDGD.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mara</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -13031,6 +13340,13 @@
 </tr>
 
 <tr>
+<td>Men in Black</td>
+<td>19891</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Men's Adventures</td>
 <td>1950</td>
 <td>Marvel</td>
@@ -13646,6 +13962,13 @@
 </tr>
 
 <tr>
+<td>Mummy's Curse</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Muppet Show</td>
 <td>1974</td>
 <td>Jim Henson</td>
@@ -13685,6 +14008,13 @@
 <td>1998</td>
 <td>Marvel</td>
 <td><a href="MutantX/MutantX.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mutant Zone</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -14312,6 +14642,13 @@
 
 <tr>
 <td>Nocturne</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Nocturne</td>
 <td>1995</td>
 <td>Marvel</td>
 <td><a href="Nocturne/Nocturne.html">Details</a></td>
@@ -14836,6 +15173,13 @@
 </tr>
 
 <tr>
+<td>Pendragon</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Penny</td>
 <td>1947</td>
 <td>Avon</td>
@@ -15138,6 +15482,13 @@
 <td>1929</td>
 <td>King Features</td>
 <td><a href="Popeye/Popeye.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Power</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -15825,6 +16176,13 @@
 </tr>
 
 <tr>
+<td>Ripper</td>
+<td>1989</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Roarin' Rick's Rare Bit Fiends</td>
 <td>1994</td>
 <td>King Hell</td>
@@ -16202,6 +16560,13 @@
 </tr>
 
 <tr>
+<td>Samurai</td>
+<td>1985</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Samurai Cat</td>
 <td>1991</td>
 <td>Epic</td>
@@ -16234,6 +16599,13 @@
 <td>1445</td>
 <td>Creator</td>
 <td><a href="SandroBotticelli/SandroBotticelli.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Sapphire</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16335,6 +16707,13 @@
 </tr>
 
 <tr>
+<td>Scimidar Book VI: Slashdance</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scooby-Doo</td>
 <td>1969</td>
 <td>Hanna-Barbera</td>
@@ -16377,6 +16756,13 @@
 </tr>
 
 <tr>
+<td>Scream Play</td>
+<td>1993</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Scribbly</td>
 <td>1948</td>
 <td>DC</td>
@@ -16388,6 +16774,13 @@
 <td>1948</td>
 <td>Disney</td>
 <td><a href="ScroogeMcDuck/ScroogeMcDuck.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Scrum of the Earth</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16650,6 +17043,13 @@
 </tr>
 
 <tr>
+<td>Shadowalker</td>
+<td>1988</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Shadowline Saga</td>
 <td>1990</td>
 <td>Epic</td>
@@ -16696,6 +17096,13 @@
 <td>1985</td>
 <td>First Comics</td>
 <td><a href="Shatter/Shatter.html">Details</a></td>
+</tr>
+
+<tr>
+<td>She-Devils on Wheels</td>
+<td>1992</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17133,6 +17540,13 @@
 </tr>
 
 <tr>
+<td>Southern Squadron</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Space Ace</td>
 <td>1960</td>
 <td>Atlas</td>
@@ -17245,7 +17659,7 @@
 </tr>
 
 <tr>
-<td>Sparkling Love<td>
+<td>Sparkling Love</td>
 <td>1950</td>
 <td>Avon</td>
 <td><a href="Avon/Avon.html">Details</a></td>
@@ -17553,13 +17967,6 @@
 </tr>
 
 <tr>
-<td>Starblast</td>
-<td>1994</td>
-<td>Marvel</td>
-<td><a href="Starblast/Starbast.html">Details</a></td>
-</tr>
-
-<tr>
 <td>Star Brand</td>
 <td>1986</td>
 <td>Marvel</td>
@@ -17578,6 +17985,13 @@
 <td>1949</td>
 <td>Publisher</td>
 <td><a href="StarPublications/StarPublications.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Starblast</td>
+<td>1994</td>
+<td>Marvel</td>
+<td><a href="Starblast/Starbast.html">Details</a></td>
 </tr>
 
 <tr>
@@ -17641,6 +18055,13 @@
 <td>1982</td>
 <td>PC</td>
 <td><a href="Starslayer/Starslayer.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Starstone</td>
+<td>1987</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -18092,6 +18513,13 @@
 </tr>
 
 <tr>
+<td>Tail of Mya Rom</td>
+<td>1988</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Tales from the Crypt</td>
 <td>1950</td>
 <td>EC</td>
@@ -18216,6 +18644,14 @@
 <td>Marvel</td>
 <td><a href="TeamAmerica/TeamAmerica.html">Details</a></td>
 </tr>
+
+<tr>
+<td>Team Nippon</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
 
 <tr>
 <td>Ted McKeever</td>
@@ -18677,6 +19113,13 @@
 <td>1975</td>
 <td>DC</td>
 <td><a href="Tor/Tor.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Torment</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
@@ -19163,6 +19606,13 @@
 </tr>
 
 <tr>
+<td>Vampyre's Kiss</td>
+<td>1990</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Van Helsing: From Beneath Rue Morgue</td>
 <td>2004</td>
 <td>Dark Horse</td>
@@ -19346,6 +19796,13 @@
 </tr>
 
 <tr>
+<td>Voyeur</td>
+<td>1991</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name ="w">Walking Dead</td>
 <td>1989</td>
 <td>Aircel</td>
@@ -19507,10 +19964,24 @@
 </tr>
 
 <tr>
+<td>Warlock 5</td>
+<td>1986</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Warlock Chronicles</td>
 <td>1993</td>
 <td>Marvel</td>
 <td><a href="WarlockChronicles/WarlockChronicles.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Warlocks</td>
+<td>1988</td>
+<td>Aircel</td>
+<td><a href="Aircel/Aircel.html">Details</a></td>
 </tr>
 
 <tr>
